# firmwares_Waveshare_RP2350-PiZero

./: LICENSE  README.md
firmwares/RP2350-PiZero/Arduino/01-DVI/hello_dvi/: affine_transform.h  hello_dvi.ino  tile.cpp
firmwares/RP2350-PiZero/Arduino/02-USB/device_info/: device_info.ino
firmwares/RP2350-PiZero/Arduino/03-MicroSD/: 03-MicroSD.ino  hw_config.c  spi.h
firmwares/RP2350-PiZero/C/01-DVI/: CMakeLists.txt
firmwares/RP2350-PiZero/C/01-DVI/apps/: CMakeLists.txt
firmwares/RP2350-PiZero/C/01-DVI/apps/gui_demo/: main.c
firmwares/RP2350-PiZero/C/01-DVI/assets/: testcard_320x240_rgb565.h
firmwares/RP2350-PiZero/C/01-DVI/include/: common_dvi_pin_configs.h
firmwares/RP2350-PiZero/C/01-DVI/libdvi/: CMakeLists.txt  dvi.c  dvi.h  dvi_config_defs.h  dvi_serialiser.c  dvi_serialiser.pio  dvi_timing.c  dvi_timing.h  tmds_encode.h  tmds_encode_1bpp.pio  tmds_table.h  tmds_table_fullres.h  tmds_table_gen.py  util_queue_u32_inline.h
firmwares/RP2350-PiZero/C/02-USB/: README.md
firmwares/RP2350-PiZero/C/02-USB/examples/: CMakeLists.txt
firmwares/RP2350-PiZero/C/02-USB/uf2/: host_hid_to_device_cdc.uf2  usb_device.uf2
firmwares/RP2350-PiZero/C/03-MicroSD/example/: CMakeLists.txt
firmwares/RP2350-PiZero/C/03-MicroSD/example/config/: hw_config.c
firmwares/RP2350-PiZero/C/03-MicroSD/src/include/: hw_config.h
firmwares/RP2350-PiZero/C/03-MicroSD/src/sd_driver/SDIO/: rp2040_sdio.pio  sd_card_sdio.c
firmwares/RP2350-PiZero/C/uf2/: 01-DVI.uf2  02-USB.uf2  03-MicroSD.uf2
firmwares/RP2350-PiZero/Python/01-MicroSD/: ReadmeCN.txt  ReadmeEN.txt  boot.py
firmwares/RP2350-PiZero/Python/uf2/: WAVESHARE_RP2350_PIZERO.uf2
firmwares/apps/gui_demo/: CMakeLists.txt
firmwares/apps/hello_dvi/: CMakeLists.txt  main.c
firmwares/piconesPlus/: piconesPlus_WaveShareRP2350PiZero_arm_piousb.uf2
firmwares/picosmsPlus/: picosmsPlus_WaveShareRP2350PiZero_arm_piousb.uf2
